Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>An Active Certificate will make set the ‘Tax Exempt?’ field on the Active to true</description>
    <inlineHelpText>An Active Certificate will make set the ‘Tax Exempt?’ field on the Active to true</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>