Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/CertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber__c</fullName>
    <label>Certificate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>