Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Optional - to track the company address associated to the certificate</description>
    <inlineHelpText>ptional - to track the company address associated to the certificate</inlineHelpText>
    <label>Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>