Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>25</length>
    <type>Text</type>
</CustomField>