Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/DateIssued__c.field-meta.xml
<CustomField>
    <fullName>DateIssued__c</fullName>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>