Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>