Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>