Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/StreetAddress_2__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress_2__c</fullName>
    <label>Street Address_2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>