Salesforce CPQ/main/default/objects/TaxExemptionCertificate__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>